# vagrant-ansible-examples-with-vyos

./: README.md  pyproject.toml
site-to-site-ipsec-vpn/: Vagrantfile
site-to-site-ipsec-vpn/playbook/: site.yml
site-to-site-ipsec-vpn/playbook/group_vars/: vpn  vyos.yml
site-to-site-ipsec-vpn/playbook/host_vars/: vyos1  vyos2
site-to-site-ipsec-vpn/playbook/roles/dhcp/tasks/: main.yml
site-to-site-ipsec-vpn/playbook/roles/dhcp/templates/: dhcp.j2  dhcp.sh.j2
site-to-site-ipsec-vpn/playbook/roles/vpn/tasks/: main.yml
site-to-site-ipsec-vpn/playbook/roles/vpn/templates/: ipsec.j2
unmanaged-l2tpv3/: Vagrantfile
unmanaged-l2tpv3/playbook/: site.yml
unmanaged-l2tpv3/playbook/group_vars/: vpn
unmanaged-l2tpv3/playbook/host_vars/: vyos1  vyos2
unmanaged-l2tpv3/playbook/roles/dhcp/tasks/: main.yml
unmanaged-l2tpv3/playbook/roles/vpn/tasks/: main.yml
unmanaged-l2tpv3/playbook/roles/vpn/templates/: ipsec.sh.j2  l2tpv3.sh.j2
