[tool.poetry]
name = "vagrant-ansible-examples-with-vyos"
version = "0.1.0"
description = ""
authors = ["Yuya Kusakabe <yuya.kusakabe@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
ansible = "^2.10.0"
paramiko = "^2.9.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
